gcc/testsuite/gfortran.dg/pr95882_1.f90
! { dg-do compile }

module m
   type t
      character(((0)/0)) :: c  ! { dg-error "Division by zero" }
   end type
end

